creating nav-bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <title>TS fundementals</title>
 </head>
 <body>
-  
+  <div class="nav-bar">
+    <div class="logo">
+      <img src="./public/imgs/logo.png" alt="logo">
+    </div>
+    <h3 class="user-container">
+      Welcome
+    </h3>
+  </div>
+  <div class="container">
+    <h4 id="reviews"></h4>
+  </div>
   <script src="public/scripts/index.js"></script>
 </body>
 </html>
