--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </div>
     <h3 class="user-container">
       Welcome
+      <span id="returning-user"></span>
+      <span id="user"></span>
     </h3>
   </div>
   <div class="container">
