--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </h3>
   </div>
   <div class="container">
+    <div class="main-image"></div>
     <h4 id="reviews"></h4>
   </div>
   <script src="public/scripts/index.js"></script>
