--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <div class="container">
     <div class="main-image"></div>
     <h4 id="reviews"></h4>
+    <button>Get reviews</button>
+    <div class="reviews"></div>
+    <div class="break"></div>
   </div>
   <script src="public/scripts/index.js"></script>
 </body>
