fix: module and import error

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <div class="reviews"></div>
     <div class="break"></div>
   </div>
-  <script src="public/scripts/index.js"></script>
+  <script type="module" src="public/scripts/index.js"></script>
 </body>
 </html>
