--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="public/styles/style.css">
+  <link rel="icon" type="image/x-icon" href="./public/imgs/favicon.ico">
   <title>TS fundementals</title>
 </head>
 <body>
@@ -23,6 +24,8 @@
     <button>Get reviews</button>
     <div class="reviews"></div>
     <div class="break"></div>
+    <h3>Other properties recommended to you:</h3>
+    <div class="properties"></div>
   </div>
   <script type="module" src="public/scripts/index.js"></script>
 </body>
