--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h3>Other properties recommended to you:</h3>
     <div class="properties"></div>
   </div>
+  <div class="footer"></div>
   <script type="module" src="public/scripts/index.js"></script>
 </body>
 </html>
